Massive updates across multiple classes. The logic has been cleaned up and stabilized.
We're closer to v1 than we were the last commit. That's for darn sure.

--- a/Launcher/LauncherWFP/MainWindow.xaml
+++ b/Launcher/LauncherWFP/MainWindow.xaml
@@ -11,6 +11,7 @@
         GlowBrush="{DynamicResource AccentColorBrush}"
         Title="OpenRCT2 Launcher" Height="350" Width="478"
         DataContext="{Binding RelativeSource={RelativeSource Self}, Path=Context}"
+        Visibility="{Binding WindowVisibility}"
         WindowStartupLocation="CenterScreen" Icon="Resources/OpenRCTIcon.ico">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
