Update all the files! Renamed LauncherWFP to LauncherWPF. I must have been drunk when I typed that name...

--- a/Launcher/LauncherWFP/App.xaml
+++ b/Launcher/LauncherWFP/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="LauncherWFP.App"
+﻿<Application x:Class="LauncherWPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LauncherWFP"
+             xmlns:local="clr-namespace:LauncherWPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
