--- a/Launcher/LauncherWFP/MainWindow.xaml
+++ b/Launcher/LauncherWFP/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Controls:MetroWindow x:Class="LauncherWFP.MainWindow"
+﻿<Controls:MetroWindow x:Class="LauncherWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:local="clr-namespace:LauncherWFP"
+        xmlns:local="clr-namespace:LauncherWPF"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
         ResizeMode="NoResize"
