--- a/Launcher/LauncherWFP/UI/Windows/Welcome.xaml
+++ b/Launcher/LauncherWFP/UI/Windows/Welcome.xaml
@@ -1,11 +1,11 @@
-﻿<Controls:MetroWindow x:Class="LauncherWFP.UI.Windows.Welcome"
+﻿<Controls:MetroWindow x:Class="LauncherWPF.UI.Windows.Welcome"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LauncherWFP.UI.Windows"
+        xmlns:local="clr-namespace:LauncherWPF.UI.Windows"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:r="clr-namespace:LauncherWFP.Resources.Text"
+        xmlns:r="clr-namespace:LauncherWPF.Resources.Text"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         GlowBrush="{DynamicResource AccentColorBrush}"
